DDW-431 - Newsfeed shadow fixes - fix for scrollbar

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -106,6 +106,17 @@
       margin: 13px 0;
     }
 
+    :global {
+      *::-webkit-scrollbar-thumb {
+        background-color: var(--theme-splash-network-scrollbar-thumb-background);
+        &:hover {
+          background-color: var(
+              --theme-splash-network-scrollbar-thumb-background-hover
+          );
+        }
+      }
+    }
+
     .newsFeedEmptyContainer,
     .newsFeedNoFetchContainer {
       align-items: center;
